Added '/admin/view-ticket.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -1240,6 +1240,7 @@ nav .nav-menu .badge li.selected a {
 }
 
 /* .table-grp */
+/* http://jsfiddle.net/e3Eqn/ */
 .table-grp {
     overflow-x:auto;
 }
