Added additional JavaScript logic for '.btn-dropdown-grp' in 'css-base.js' plus styling in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -462,6 +462,7 @@ select.btn-dropdown {
     visibility: hidden;
     position: absolute;
     top: 45px;
+    transition: visibility 0.15s;
 }
 
 .btn-dropdown-grp .btn-dropdown-items.open {
