--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -439,6 +439,11 @@ select.btn-dropdown {
 .btn-dropdown-grp {
     position: relative;
     width: 100%;
+    /* https://stackoverflow.com/questions/6900124/how-to-make-certain-text-not-selectable-with-css */
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .btn-dropdown-grp .btn-dropdown {
