Added styling for '.modal' in '/manage-account.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -543,6 +543,10 @@
     .section-user-profile .panel-item .favourites-grp .fav {
         width: 300px;
     }
+
+    .modal {
+        width: 100%;
+    }
 }
 
 @media(max-width: 408px) {
