--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -779,3 +779,63 @@ select.btn-dropdown {
     margin: auto;
     padding: 25px;
 }
+
+.modal {
+    background: #ddd;
+    padding: 15px;
+    /* margin: 30px 0; */
+    height: 100%;
+    width: 480px;
+    position: fixed;
+    top: 0;
+    box-shadow: -2px 0px 4px rgba(0, 0, 0, 0.4);
+    z-index: 18;
+    overflow-y: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    display: none;
+}
+
+.modal::-webkit-scrollbar {
+    display: none;
+}
+
+.modal-small {
+    width: 480px;
+}
+
+.modal.open {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal .modal-content .category,
+.modal .modal-footer {
+    border-top: 1px solid #666;
+    padding: 8px 0;
+}
+
+.modal .modal-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.modal .modal-content .img-grp.rounded {
+    position: relative;
+    width: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.modal .modal-content .img-grp.rounded img {
+    width: 170px;
+    border-radius: 50%;
+    border: 3px solid #eee;
+}
+
+.modal .modal-content .img-grp.rounded button {
+    border-radius: 50%;
+    position: absolute;
+    left: 60%;
+}
