Added extra buttons to modal in '/admin/view-tickets.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -838,6 +838,7 @@ select.btn-dropdown {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    flex-wrap: wrap;
 }
 
 .modal .modal-content .img-grp.rounded {
